<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/frame"
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".activities.MainActivity">

    <fragment android:id="@+id/master_list_fragment"
              android:name="gauravsngarg.com.bakingrecipes.Recipe_List_Fragment"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"/>
</FrameLayout>