<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="gauravsngarg.com.bakingrecipes.Master_Recipe_Fragment"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_recipes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </android.support.v7.widget.RecyclerView>

</FrameLayout>